--- a/app/index.html
+++ b/app/index.html
@@ -1,23 +1,99 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>MetaCoin - Truffle Webpack Demo w/ Frontend</title>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-  <script src="./app.js"></script>
-</head>
-<body>
-  <h1>MetaCoin</h1>
-  <h2>Example Truffle Dapp</h2>
-  <h3>You have <span class="black"><span id="balance"></span> META</span></h3>
+  <head>
+    <title>Blottery - a blockchain-based lottery game</title>
+    <link href='https://fonts.googleapis.com/css?family=Sofia|Alice|Caudex' rel='stylesheet'>
+    <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous"
+    />
+    <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
+      integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./app.js"></script>
+  </head>
 
-  <br>
-  <h1>Send MetaCoin</h1>
-  <br><label for="amount">Amount:</label><input type="text" id="amount" placeholder="e.g., 95"></input>
-  <br><label for="receiver">To Address:</label><input type="text" id="receiver" placeholder="e.g., 0x93e66d9baea28c17d9fc393b53e3fbdd76899dae"></input>
-  <br><br><button id="send" onclick="App.sendCoin()">Send MetaCoin</button>
-  <br><br>
-  <span id="status"></span>
-  <br>
-  <span class="hint"><strong>Hint:</strong> open the browser developer console to view any errors and warnings.</span>
-</body>
+  <body>
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand nav-title">Blottery</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <form class="navbar-form navbar-right">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="address" />
+              <input
+                type="password"
+                class="form-control"
+                placeholder="password"
+              />
+            </div>
+            <button type="submit" class="btn btn-primary">login</button>
+          </form>
+        </div>
+        <!--/.nav-collapse -->
+      </div>
+    </nav>
+
+    <div class="page-header font-Alice"><h1>Lottery List</h1></div>
+    <div class=".container-fluid font-Caudex">
+      <div class="row vertical-align">
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 table-head">
+          Address
+        </div>
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 table-head">
+          Pool(ether)
+        </div>
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 table-head">
+          Action
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-vc">
+          0x9a7b8ABc59859142396B926EE1Bc706092915723
+        </div>
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-vc">
+          0x12345172727272742489104
+        </div>
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+          <buttun class="btn btn-success">Buy</buttun>
+          <buttun class="btn btn-primary">Award</buttun>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-vc">
+          0x12345
+        </div>
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-vc">
+          0x12345
+        </div>
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+          <buttun class="btn btn-success">Buy</buttun>
+          <buttun class="btn btn-primary">Award</buttun>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-vc">
+          0x12345
+        </div>
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-vc">
+          0x12345
+        </div>
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+          <buttun class="btn btn-success">Buy</buttun>
+          <buttun class="btn btn-primary">Award</buttun>
+        </div>
+      </div>
+    </div>
+
+
+  </body>
 </html>
