--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
           <a class="navbar-brand nav-title">Blottery</a>
         </div>
         <div id="unlogined">
-          <form class="navbar-form navbar-right">
+          <form class="navbar-form navbar-right" method="POST">
             <div class="form-group">
               <input
                 name="address"
@@ -45,18 +45,18 @@
                 class="form-control"
                 placeholder="password"
               />
-              <button class="btn btn-primary" id="login-btn">login</button>
+              <button type="button" class="btn btn-primary" id="login-btn">login</button>
             </div>
           </form>
         </div>
-        <div class="navbar-right" id="logined">
+        <div class="navbar-right" id="logined" hidden="true">
           <button
             class="btn btn-primary navbar-btn"
             title="sponsor a lottery game"
           >
             sponsor
           </button>
-          <button class="btn navbar-btn" title="logout">logout</button>
+          <button class="btn navbar-btn" title="logout" id="logout-btn">logout</button>
         </div>
         <!--/.nav-collapse -->
       </div>
@@ -83,8 +83,8 @@
           0x12345172727272742489104
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-          <buttun class="btn btn-success">Buy</buttun>
-          <buttun class="btn btn-primary">Award</buttun>
+          <buttun class="btn btn-success lottery-action-btn disabled">Buy</buttun>
+          <buttun class="btn btn-primary lottery-action-btn disabled">Award</buttun>
         </div>
       </div>
       <div class="row">
@@ -92,8 +92,8 @@
         <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 text-vc">2008</div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 text-vc">0x12345</div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-          <buttun class="btn btn-success">Buy</buttun>
-          <buttun class="btn btn-primary">Award</buttun>
+          <buttun class="btn btn-success lottery-action-btn disabled">Buy</buttun>
+          <buttun class="btn btn-primary lottery-action-btn disabled">Award</buttun>
         </div>
       </div>
       <div class="row">
@@ -101,8 +101,8 @@
         <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 text-vc">2008</div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 text-vc">0x12345</div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-          <buttun class="btn btn-success">Buy</buttun>
-          <buttun class="btn btn-primary">Award</buttun>
+          <buttun class="btn btn-success lottery-action-btn disabled">Buy</buttun>
+          <buttun class="btn btn-primary lottery-action-btn disabled">Award</buttun>
         </div>
       </div>
     </div>
