--- a/app/index.html
+++ b/app/index.html
@@ -81,7 +81,7 @@
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-dismiss="modal" id="submit-btn">Sponsor!</button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal" id="submit-sponsor-btn">Sponsor!</button>
             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
           </div>
         </div>
@@ -119,7 +119,7 @@
             </div>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-primary" data-dismiss="modal" id="submit-btn">Buy!</button>
+              <button type="button" class="btn btn-primary" data-dismiss="modal" id="buy-submit-btn">Buy!</button>
               <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
             </div>
           </div>
