add .text center

--- a/app/index.html
+++ b/app/index.html
@@ -91,14 +91,14 @@
     <div class="page-header font-Alice"><h1>Lottery List</h1></div>
     <div id="list" class=".container-fluid font-Caudex">
       <div class="row vertical-align">
-        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 table-head">
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 table-head text-center">
           Address
         </div>
-        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 table-head">Due</div>
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 table-head">
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 table-head text-center">Due</div>
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 table-head text-center">
           Pool(ether)
         </div>
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 table-head">Action</div>
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 table-head text-center">Action</div>
       </div>
 
       <div class="modal fade" id="buy-modal" tabindex="-1" role="dialog" aria-labelledby="buyModal">
